# herd-core

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  mcp-config.json  pyproject.toml
.github/workflows/: test.yml
.herd/: STATUS.md  craft.md
.herd/decisions/: 0017-protocol-based-adapter-interfaces.md  0018-mcp-server-is-core-not-adapter.md  0019-entity-typed-store-adapter.md  0021-store-reporting-methods.md  0022-python-311-floor.md  0023-mcp-server-default-in-herd-core.md  0024-team-naming-identity-architecture.md  0025-storage-leadership-pattern.md  0026-public-mcp-cloudflare-security.md  0027-herd-ag-org-for-herd-repos.md  0028-deployment-consistency-model.md  0029-ux-dx-ax-experience-hierarchy.md  0030-env-config-rolls-up-to-core.md  0031-operational-store-is-adapter-semantic-is-core.md  0032-adapter-env-var-naming-convention.md  0033-lancedb-semantic-memory-architecture.md  0034-project-scoping-dimensions.md  0035-structural-graph-store.md  0036-autonomous-feedback-loops.md  0037-async-write-serialization.md  0038-agent-messaging-via-mcp-bus.md  0038-spec-message-bus.md  0039-herd-checkin.md  0042-lessons-learned-memory-type.md  0043-system-observations-memory-type.md
.herd/docs/: agent-reference.md  dashboard-reference.md  hdr-guide.md  mcp-server.md  overview.md  schema-reference.md  templates.md  workflow.md
.herd/roles/: fresco.md  leonardo.md  mason.md  rook.md  scribe.md  steve.md  tufte.md  vigil.md  wardenstein.md
data/herd.lance/memories.lance/_transactions/: 0-8fb1aef9-9394-4f09-8eaf-37f8b6e820ff.txn  1-11213601-ba1d-4c4e-bb1a-deb334bfd663.txn  10-e56ce92e-f6f6-42f1-bae4-bbf0068bf19b.txn  100-691fe235-cd68-4980-baca-11685d1c32d7.txn  101-003e8df8-c041-4fc1-9262-4fff20e03063.txn  102-0a4659a8-1f05-4854-8ad1-706833a36ace.txn  103-69a76e4d-134e-4bdf-84bc-9b95da29ee07.txn  104-f596401d-e80f-42c9-8c0b-e19a909063bb.txn  105-958e880b-7ff3-42da-ac0a-74cc6a372087.txn  106-b4aa5b10-2689-4601-a415-da3edf430480.txn  107-eea8d585-16d1-45f6-97fb-8b32b9992db5.txn  108-3f63e09f-e525-4168-b262-8eeb453af5c1.txn  (+174 more)
herd_core/: __init__.py  config.py  queries.py  types.py
herd_core/adapters/: __init__.py  agent.py  notify.py  repo.py  store.py  tickets.py
herd_mcp/: __init__.py  __main__.py  adapters.py  bus.py  daemon.py  db.py  graph.py  identity.py  linear_client.py  memory.py  rest_server.py  schema.sql  server.py  session_manager.py  slack_listener.py  vault_refresh.py
herd_mcp/tools/: __init__.py  _helpers.py  assign.py  assume_role.py  catchup.py  checkin.py  create_ticket.py  get_messages.py  graph.py  lifecycle.py  log.py  metrics.py  recall.py  record_decision.py  review.py  spawn.py  status.py  token_harvest.py  transition.py
scripts/: backfill.py  bootstrap_graph.py  seed_db.py
tests/: conftest.py  test_adapters.py  test_adapters_core.py  test_adapters_mcp.py  test_assign.py  test_assume_role.py  test_backfill.py  test_bus.py  test_catchup.py  test_checkin.py  test_config.py  test_create_ticket.py  test_daemon.py  test_db.py  test_graph.py  test_helpers.py  test_init.py  test_integration.py  test_lifecycle.py  test_linear_client.py  test_log.py  test_metrics.py  test_next_hdr_number.py  test_queries.py  test_record_decision.py  test_rest_server.py  test_review.py  test_server.py  test_session_manager.py  test_slack_listener.py  test_spawn.py  test_status.py  test_store_wiring.py  test_token_harvest.py  test_transition_simple.py  test_types.py  test_vault_refresh.py
