[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-core"
version = "0.0.1"
description = "Agent team governance framework — execution-agnostic roles, authority models, decision capture, and craft standards for AI agent teams."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Faust Eriksen" }
]
keywords = [
    "ai", "agents", "governance", "multi-agent", "agent-framework",
    "decision-records", "craft-standards", "team-topology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0",
    "duckdb>=1.0",
    "aiohttp>=3.9",
    "slack_sdk>=3.27",
]

[project.urls]
Homepage = "https://github.com/herd-ag/herd-core"
Documentation = "https://github.com/herd-ag/herd-core"
Repository = "https://github.com/herd-ag/herd-core"
Issues = "https://github.com/herd-ag/herd-core/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.4", "black>=24.0", "mypy>=1.10"]
adapters = [
    "herd-notify-slack @ git+https://github.com/herd-ag/herd-notify-slack.git",
    "herd-ticket-linear @ git+https://github.com/herd-ag/herd-ticket-linear.git",
    "herd-repo-github @ git+https://github.com/herd-ag/herd-repo-github.git",
    "herd-agent-claude @ git+https://github.com/herd-ag/herd-agent-claude.git",
    "herd-store-duckdb @ git+https://github.com/herd-ag/herd-store-duckdb.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["herd_core", "herd_mcp"]
